--- a/CRUD-RESTFUL-API/package.json
+++ b/CRUD-RESTFUL-API/package.json
@@ -2,13 +2,15 @@
   "name": "crud-restful-api",
   "version": "1.0.0",
   "description": "\"making my first Api(During Learning Process )\"",
-  "main": "App.mjs",
+  "main": "App.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon App.mjs"
+    "start": "nodemon App.js"
   },
   "author": "@muhib7353",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2"
