--- a/FIRST_MERN_STACK/Backend/package.json
+++ b/FIRST_MERN_STACK/Backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "backend",
   "version": "1.0.0",
@@ -12,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2"
@@ -20,4 +20,3 @@
     "nodemon": "^2.0.20"
   }
 }
-
